--- a/index.html
+++ b/index.html
@@ -1,56 +1,182 @@
-<section id="stats" class="fade-in">
-  <div class="card">Участников: <span id="members">—</span></div>
-  <div class="card">Онлайн: <span id="online">—</span></div>
-  <div class="card">В войсе: <span id="voice">—</span></div>
-  <a id="join" class="btn" href="https://discord.gg/ВАШ_CODE" target="_blank">Вступить</a>
-</section>
-
-<section id="announcements" class="fade-in delay-1">
-  <h2>Объявления</h2>
-  <div id="messages"></div>
-</section>
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Сервер Мурино</title>
 <style>
-.fade-in { opacity: 0; transform: translateY(10px); animation: appear 0.6s forwards; }
-.delay-1 { animation-delay: 0.2s; }
-@keyframes appear { to { opacity: 1; transform: translateY(0); } }
-.card { padding:12px; margin:6px 0; border-radius:8px; background: rgba(255,255,255,0.03); }
-.btn { display:inline-block; padding:10px 16px; border-radius:10px; background:#5865F2; color:white; text-decoration:none; }
+  body {
+    margin: 0;
+    font-family: "Segoe UI", sans-serif;
+    background-color: #2f3136;
+    color: #ffffff;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    background-color: #36393f;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+  }
+
+  header h1 {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  header button {
+    background-color: #5865F2;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+  header button:hover {
+    background-color: #4752c4;
+  }
+
+  main {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    gap: 20px;
+  }
+
+  .stats {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    min-width: 180px;
+  }
+
+  .stat-block {
+    background-color: #36393f;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 18px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+    transition: transform 0.2s;
+  }
+
+  .stat-block:hover {
+    transform: translateY(-2px);
+  }
+
+  .stat-block span {
+    display: block;
+    font-size: 30px;
+    margin-bottom: 5px;
+  }
+
+  .join-btn {
+    margin-top: 10px;
+    background-color: #5865F2;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .join-btn:hover {
+    background-color: #4752c4;
+  }
+
+  .announcements {
+    flex: 1;
+    background-color: #40444b;
+    border-radius: 10px;
+    padding: 15px;
+    max-height: 500px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .announcement-card {
+    background-color: #2f3136;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 1px 5px rgba(0,0,0,0.5);
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+  }
+
+  .announcement-card img {
+    max-width: 100%;
+    border-radius: 6px;
+    pointer-events: none; /* некликабельные картинки */
+    user-select: none;
+    margin-top: 5px;
+  }
+
+  @keyframes fadeIn {
+    to { opacity: 1; }
+  }
 </style>
+</head>
+<body>
+  <header>
+    <h1>Добро пожаловать на сайт сервера 📍Мурино</h1>
+    <button onclick="switchPage()">Перейти на Minecraft</button>
+  </header>
 
-<script>
-async function loadData() {
-  try {
-    const r = await fetch('data.json?' + Date.now());
-    const d = await r.json();
-    document.getElementById('members').textContent = d.totalMembers;
-    document.getElementById('online').textContent = d.onlineCount;
-    document.getElementById('voice').textContent = d.voiceCount;
-    const messagesDiv = document.getElementById('messages');
-    messagesDiv.innerHTML = '';
-    (d.messages || []).forEach(m => {
-  const el = document.createElement('div');
-  el.className = 'card';
-  el.innerHTML = `<b>${m.author}</b> <small>${new Date(m.time).toLocaleString()}</small>
-                  <div>${m.content}</div>`;
-  
-  // добавляем медиа
-  (m.attachments || []).forEach(att => {
-    if (att.contentType?.startsWith('image')) {
-      const img = document.createElement('img');
-      img.src = att.url;
-      img.style.maxWidth = '100%';
-      img.style.borderRadius = '8px';
-      img.style.marginTop = '6px';
-      el.appendChild(img);
+  <main>
+    <div class="stats">
+      <div class="stat-block"><span>👥</span> <div id="total-members">0</div> Всего участников</div>
+      <div class="stat-block"><span>💻</span> <div id="online-members">0</div> Онлайн</div>
+      <div class="stat-block"><span>🎤</span> <div id="voice-members">0</div> В войсе</div>
+      <button class="join-btn" onclick="window.open('https://discord.gg/ТВОЙ_ССЫЛКА')">Вступить в Discord</button>
+    </div>
+
+    <div class="announcements" id="announcements">
+      <!-- объявления подтягиваются через JS -->
+    </div>
+  </main>
+
+  <script>
+    function switchPage() {
+      window.location.href = '/minecraft.html';
     }
-    // можно добавить обработку видео или других типов
-  });
 
-  messagesDiv.appendChild(el);
-});
-  } catch(e){ console.warn('data.json не загрузился', e); }
-}
-loadData();
-setInterval(loadData, 60000);
-</script>
+    async function loadData() {
+      const res = await fetch('data.json?' + Date.now());
+      const data = await res.json();
+
+      document.getElementById('total-members').textContent = data.totalMembers;
+      document.getElementById('online-members').textContent = data.onlineCount;
+      document.getElementById('voice-members').textContent = data.voiceCount;
+
+      const announcementsDiv = document.getElementById('announcements');
+      announcementsDiv.innerHTML = '';
+      (data.messages || []).forEach((m, i) => {
+        const card = document.createElement('div');
+        card.className = 'announcement-card';
+        card.style.animationDelay = `${i * 0.1}s`; // плавное появление
+
+        let content = `<b>${m.author}</b> <small>${new Date(m.time).toLocaleString()}</small><div>${m.content}</div>`;
+        (m.attachments || []).forEach(att => {
+          if (att.contentType?.startsWith('image')) {
+            content += `<img src="${att.url}" alt="media">`;
+          }
+        });
+
+        card.innerHTML = content;
+        announcementsDiv.appendChild(card);
+      });
+    }
+
+    loadData();
+    setInterval(loadData, 30000); // обновление каждые 30 секунд
+  </script>
+</body>
+</html>
