--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
   <header>
     <h1>Добро пожаловать на сайт сервера 📍Мурино</h1>
-    <button onclick="location.href='minecraft.html'">Перейти на Minecraft</button>
+    <button onclick="location.href='minecraft.html'">Пикми-сборка 2.0</button>
   </header>
 
   <main>
